fix: alignment

--- a/assets/scss/partials/menu.scss
+++ b/assets/scss/partials/menu.scss
@@ -57,7 +57,7 @@ details>ul {
 .site-nav>details {
     >summary {
       display: flex;
-      column-gap: 10px;
+      column-gap: 5px;
     }
 
     &[open]>summary::before {
@@ -68,19 +68,19 @@ details>ul {
     >summary::before {
         display: inline-block;
         vertical-align: top;
-        content: url("data:image/svg+xml,%3Csvg width='7' height='10' viewBox='0 0 7 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.66669 1L5.66669 5L1.66669 9' stroke='%239B9B9B' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+        content: var(--chevron-icon);
         transition: transform 0.1s ease-in-out;
     }
 
     >details>summary {
       display: flex;
-      column-gap: 10px;
+      column-gap: 5px;
     }
 
     >details>summary::before {
         display: inline-block;
         vertical-align: top;
-        content: url("data:image/svg+xml,%3Csvg width='7' height='10' viewBox='0 0 7 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.66669 1L5.66669 5L1.66669 9' stroke='%239B9B9B' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+        content: var(--chevron-icon);
         transition: transform 0.1s ease-in-out;
     }
 
@@ -91,7 +91,7 @@ details>ul {
 
 .site-nav>details>details {
     ul>li {
-        padding-left: 60px;
+        padding-left: 36px;
     }
 }
 
